# ghascii

./: .gitignore  README.md  pyproject.toml
ghascii/: __init__.py  __main__.py  app.py  auth.py  cache.py  config.py  git.py  github.py  ui.py
ghascii/screens/: __init__.py  clone_progress.py  code_view.py  diff_view.py  error.py  file_tree.py  help.py  login.py  menu.py  repo_list.py  revisions.py  settings.py  update.py
tests/: __init__.py  test_smoke.py
